Make sure badge resources fit nicely on mobile

--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ blockquote em {
 
 .badges > img {
     width: 400px;
+    max-width: 100%;
 }
 
 .badges .badge-links {
